demo1/src/objects/Public_Event__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dreamforce</fullName>
                </value>
                <value>
                    <fullName>Connections</fullName>
                </value>
                <value>
                    <fullName>World Tour</fullName>
                </value>
                <value>
                    <fullName>Lightning Essentials</fullName>
                </value>
                <value>
                    <fullName>Boot Camp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Venue_Address_2__c</fullName>
        <label>Venue Address #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <label>Venue Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venue_City__c</fullName>
        <label>Venue City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Postal_Code__c</fullName>
        <label>Venue Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_State__c</fullName>
        <label>Venue State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Public Events</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Public Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Public Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>